Undoes fixed header (due to search results then appearing on top of the page having scrolled, or covering the main highlight cards).

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ hr {
     $COMPONENTS
 \*------------------------------------*/
 .header {
-    position: fixed;
     z-index: 10;
     width: 100%;
     height: 50px;
@@ -186,8 +185,8 @@ hr {
 
 
 .search {
+    z-index: 4;
     width: 100%;
-    padding-top: 50px;
     padding-bottom: 20px;
     background-color: #e3e3d4;
 }
